@@ -43,6 +43,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #19097: Raise the correct Exception when cgi.FieldStorage is given an
+  Invalid fileobj.
+
 - Issue #20217: Fix build in SCHED_SPORADIC is defined.
 
 - Issue #13107: argparse and optparse no longer raises an exception when output
